feat: add route cars

--- a/views/cars.ejs
+++ b/views/cars.ejs
@@ -15,24 +15,20 @@
   <div class="row">
     <div class="col-2">
       <div class="d-block my-2">
-        <span class="font-sidebar mx-1" style="color: #8A8A8A;">DASHBOARD</span>
+        <span class="font-sidebar mx-1" style="color: #8A8A8A;">CARS</span>
       </div>
       <div class="d-block my-4" style="height:40px; background-color: #CFD4ED;">
-        <span class="d-block font-sidebar mx-1 pt-2">Dashboard</span>
+        <span class="d-block font-sidebar mx-1 pt-2">List Cars</span>
       </div>      
     </div>
     <div class="col p-3" style="background-color: #E5E5E5;">
       <div class="d-block mb-3">
-        <span class="font-source" style="font-weight: 700; color: #000000;">Dashboard</span> 
+        <span class="font-source" style="font-weight: 700; color: #000000;">Cars</span> 
         <img class="mx-1" src="../../public/icons/fi_next.png" alt="">
-        <span class="font-source" style="font-weight: 300; color: #222222;">Dashboard</span>
+        <span class="font-source" style="font-weight: 300; color: #222222;">List Car</span>
       </div>
       <div class="d-block mb-3">
-        <span class="font-title">Dashboard</span>
-      </div>
-      <div class="d-block mb-2">
-        <img class="mx-1" src="../../public/list.png" alt="">
-        <span class="font-sidebar">List Order</span>
+        <span class="font-title">List Car</span>
       </div>
       <div>
         <table id="example" class="display" style="width:100%;">
