--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -44,7 +44,7 @@
                 </a>
                 <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
                     <li class="nav-item py-2">
-                        <a href="#" aria-current="page">
+                        <a href="/" aria-current="page">
                             <img src="../../public/icons/home.png" alt="">
                             <p class="text-light">
                                 Dashboard
@@ -52,7 +52,7 @@
                         </a>
                     </li>
                     <li class="nav-item py-2">
-                        <a href="#" aria-current="page">
+                        <a href="/cars" aria-current="page">
                             <img src="../../public/icons/fi_truck.png" alt="">
                             <p class="text-light">
                                 Cars
@@ -82,7 +82,7 @@
                                         <img class="icon" src="../../public/icons/fi_search.png" alt="logo">
                                     </i>
                                     <input class="border border-1 input-field pt-1" type="search" placeholder="Search" aria-label="Search" style="width: 180px; height: 36px;">
-                                    <button class="btn btn-light btn-outline-primary font-search" type="submit" style="height: 36px;">Search</button>
+                                    <button class="btn btn-light btn-outline-primary font-search" type="submit" style="height: 36px; margin-left: -4px;">Search</button>
                                 </form>   
                             </div>
                             <div class="col-5">
