--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -44,7 +44,7 @@
                 </a>
                 <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
                     <li class="nav-item py-2">
-                        <a href="/" aria-current="page">
+                        <a href="/" aria-current="page" style="text-decoration: none;">
                             <img src="../../public/icons/home.png" alt="">
                             <p class="text-light">
                                 Dashboard
@@ -52,7 +52,7 @@
                         </a>
                     </li>
                     <li class="nav-item py-2">
-                        <a href="/cars" aria-current="page">
+                        <a href="/cars" aria-current="page" style="text-decoration: none;">
                             <img src="../../public/icons/fi_truck.png" alt="">
                             <p class="text-light">
                                 Cars
