feat: add list cars and new cars

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -36,19 +36,19 @@
                 <div class="mb-3 row">
                     <label class="col-sm-2 col-form-label">Nama</label>
                     <div class="col-sm-10">
-                    <input type="text" class="form-control" >
+                    <input type="text" class="form-control" placeholder="Placeholder">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label class="col-sm-2 col-form-label">Harga</label>
                     <div class="col-sm-10">
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" placeholder="Placeholder">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label class="col-sm-2 col-form-label">Foto</label>
                     <div class="col-sm-10">
-                    <input type="file" class="form-control" >
+                    <input type="file" class="form-control">
                     </div>
                 </div>
                 <div class="mb-3 row">
