feat: add button delete car

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -75,6 +75,8 @@
                     <input type="text" readonly class="form-control-plaintext" value="-">
                     </div>
                 </div>
+                <a href="/cars" class="btn btn-primary" style="background: #FFFFFF; color: blue;">Cancel</a>
+                <a href="/cars" type="submit" class="btn btn-primary">Save</a>
            </form>
         </div>
     </div>
